force-app/main/default/objects/MUSW__Resource_Absence__c/MUSW__Resource_Absence__c.object-meta.xml
<CustomObject>
    <label>Resource Absence</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>