force-app/main/default/objects/MUSW__Resource_Absence__c/fields/MUSW__Absence_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Absence_Start_DateTime__c</fullName>
    <label>Absence Start</label>
    <type>DateTime</type>
</CustomField>