force-app/main/default/objects/MUSW__Resource_Absence__c/fields/MUSW__Is_All_Day_Absence__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Is_All_Day_Absence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All-Day Absence</label>
    <type>Checkbox</type>
</CustomField>