force-app/main/default/objects/MUSW__Resource_Absence__c/validationRules/MUSW__Absence_End_Must_Not_Precede_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Absence_End_Must_Not_Precede_Start</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Absence_End_DateTime__c &lt;  MUSW__Absence_Start_DateTime__c</errorConditionFormula>
    <errorDisplayField>MUSW__Absence_End_DateTime__c</errorDisplayField>
    <errorMessage>Absence End must be later than or equal to Absence Start.</errorMessage>
</ValidationRule>