force-app/main/default/objects/MUSW__Resource_Absence__c/validationRules/MUSW__Require_Absence_End.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Require_Absence_End</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MUSW__Absence_End_DateTime__c )</errorConditionFormula>
    <errorDisplayField>MUSW__Absence_End_DateTime__c</errorDisplayField>
    <errorMessage>Absence End is required.</errorMessage>
</ValidationRule>