force-app/main/default/objects/MUSW__Resource_Absence__c/validationRules/MUSW__Require_Absence_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Require_Absence_Start</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MUSW__Absence_Start_DateTime__c )</errorConditionFormula>
    <errorDisplayField>MUSW__Absence_Start_DateTime__c</errorDisplayField>
    <errorMessage>Absence Start is required.</errorMessage>
</ValidationRule>